# eclassdl

./: .gitignore  README.md  eclassdl.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: eclassdl.py  eclassdl.spec  requirments.txt
