[tool.poetry]
name = "eclassdl"
version = "0.1.0"
description = "Batch downloader for UAlberta eClass files."
authors = [
    "Michael Kwok <n30phyte@users.noreply.github.com>",
    "Amir Hansen <mia2b@hotmail.com>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
requests = "^2.26.0"
lxml = "^4.6.4"

[tool.poetry.dev-dependencies]
black = { version = "^21.11b1", allow-prereleases = true }

[tool.poetry.scripts]
eclassdl = "eclassdl:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
